Project structure changes + DB code

--- a/InsuranceTech/appsettings.json
+++ b/InsuranceTech/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "InsuranceTechDbContext": "Data Source=InsuranceTechDbContext-32a9b64f-b8bb-48c9-8e0f-59989656c09e.db"
+  }
 }
